--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Vue + Vuex - User Registration and Login Example & Tutorial</title>
+    <title>Dra. Vega</title>
     <style>
         a {
             cursor: pointer;
